--- a/test/cryptocurrency-prices-test.html
+++ b/test/cryptocurrency-prices-test.html
@@ -74,15 +74,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <div class="header-container">
 <div class="container relative">
-    <img src="css/images/bg-first-screen.svg" alt class="bg bg-main">
+    <img src="../css/images/bg-first-screen.svg" alt class="bg bg-main">
     <header class="header">
         <a href="https://atomicwallet.io" class="header-logo">
-            <img src="css/images/logo.svg" alt="Atomic" class="img-logo">
+            <img src="../css/images/logo.svg" alt="Atomic" class="img-logo">
         </a>
         <nav class="header-menu f-light">
             <a href="/">Wallet</a>
             <a href="https://atomicwallet.io/buy-bitcoin" class="hvr-grow">Buy Bitcoin</a>
-            <a href="assets" class="header-menu-here hvr-grow">Assets</a>
+            <a href="/assets" class="header-menu-here hvr-grow">Assets</a>
             <a href="/downloads" class="hvr-grow">Download</a>
             <a href="https://support.atomicwallet.io/" target="_blank" class="hvr-grow">Support</a>
             <a href="https://atomicwallet.io/token" class="hvr-grow">Token</a>
@@ -90,22 +90,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <nav class="header-menu-icons  f-light">
 
               <a href="https://twitter.com/atomicwallet" target="_blank" class="hvr-float" rel="nofollow">
-                  <img src="css/images/top_twitter.svg">
+                  <img src="../css/images/top_twitter.svg">
               </a>
               <a href="https://t.me/atomicwalletchat" target="_blank" class="hvr-float" rel="nofollow">
-                  <img src="css/images/top_telegram.svg">
+                  <img src="../css/images/top_telegram.svg">
               </a>
               <a href="https://medium.com/atomic-wallet" target="_blank" class="hvr-float" rel="nofollow">
-                      <img src="css/images/top_medium.svg">
+                      <img src="../css/images/top_medium.svg">
                   </a>
               <a href="https://www.facebook.com/atomicwallet" target="_blank" class="hvr-float">
-                      <img src="css/images/top_facebook.svg">
+                      <img src="../css/images/top_facebook.svg">
                   </a>
               <a href="https://www.reddit.com/r/atomicwallet/" target="_blank" class="hvr-float" rel="nofollow">
-                  <img src="css/images/top_reddit.svg">
+                  <img src="../css/images/top_reddit.svg">
               </a>
              <a href="https://steemit.com/@atomicwallet" target="_blank" class="hvr-float">
-                <img src="css/images/top_steemit.svg">
+                <img src="../css/images/top_steemit.svg">
             </a>
 
           </nav>
@@ -216,32 +216,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container relative">
         <div class="footer-row">
             <div class="footer-new-left">
-                <a href="/"><img src="css/images/logo.png" alt="" class="footer-new-logo"></a><br>
+                <a href="/"><img src="../css/images/logo.png" alt="" class="footer-new-logo"></a><br>
                 <a href="mailto:support@atomicwallet.io" class="footer-new-email f-light">support@atomicwallet.io</a><br>
                 <div class="footer-new-soc">
                     <a href="https://twitter.com/atomicwallet" target="_blank" rel="nofollow">
-                        <img src="css/images/top_twitter.svg">
+                        <img src="../css/images/top_twitter.svg">
                     </a>
                     <a href="https://t.me/atomicwalletchat" target="_blank" rel="nofollow">
-                        <img src="css/images/top_telegram.svg">
+                        <img src="../css/images/top_telegram.svg">
                     </a>
                     <a href="https://github.com/Atomicwallet" target="_blank" rel="nofollow">
-                        <img src="css/images/top_github.svg">
+                        <img src="../css/images/top_github.svg">
                     </a>
                     <a href="https://medium.com/atomic-wallet" target="_blank" rel="nofollow">
-                        <img src="css/images/top_medium.svg">
+                        <img src="../css/images/top_medium.svg">
                     </a>
                     <a href="https://www.reddit.com/r/atomicwallet/" target="_blank" rel="nofollow">
-                        <img src="css/images/top_reddit.svg">
+                        <img src="../css/images/top_reddit.svg">
                     </a>
                     <a href="https://www.facebook.com/atomicwallet" target="_blank" rel="nofollow">
-                        <img src="css/images/top_facebook.svg">
+                        <img src="../css/images/top_facebook.svg">
                     </a>
                     <a href="https://steemit.com/@atomicwallet" target="_blank" rel="nofollow">
-                        <img src="css/images/top_steemit.svg">
+                        <img src="../css/images/top_steemit.svg">
                     </a>
                     <a href="https://www.youtube.com/channel/UCLMnUt6BBtA67eic1vRGF3g" target="_blank" rel="nofollow">
-                        <img src="css/images/top_youtube.svg">
+                        <img src="../css/images/top_youtube.svg">
                     </a>
                 </div>
             </div>
